feat: use mlflow deployment

--- a/mlflow-e2e-evaluation.ipynb
+++ b/mlflow-e2e-evaluation.ipynb
@@ -8,13 +8,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://raw.githubusercontent.com/mlflow/mlflow/master/docs/source/llms/rag/notebooks/mlflow-e2e-evaluation.ipynb\" class=\"notebook-download-btn\"><i class=\"fas fa-download\"></i>Download this Notebook</a>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -35,9 +28,6 @@
     "\n",
     "2. **Understanding RAG Systems**:\n",
     "   - Delve into the concept of Retrieval-Augmented Generation and its significance in modern AI applications. Understand how RAG systems leverage both retrieval and generation capabilities to provide accurate and contextually relevant responses.\n",
-    "\n",
-    "3. **Securely Managing API Keys with Databricks Secrets**:\n",
-    "   - Explore the best practices for securely managing API keys using Databricks Secrets. This part is crucial for ensuring the security and integrity of your application.\n",
     "\n",
     "4. **Deploying and Testing RAG Systems with MLflow**:\n",
     "   - Learn how to create, deploy, and test RAG systems using MLflow. This includes setting up endpoints, deploying models, and querying them to see their responses in action.\n",
@@ -78,33 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install mlflow>=2.8.1\n",
-    "%pip install openai\n",
-    "%pip install chromadb==0.4.15\n",
-    "%pip install langchain==0.0.348\n",
-    "%pip install tiktoken\n",
-    "%pip install 'mlflow[genai]'\n",
-    "%pip install databricks-sdk --upgrade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "bbe9a743-feca-4de0-80f9-f64267578482",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dbutils.library.restartPython()  # noqa: F821"
+    "%pip install -r requirements.txt -q"
    ]
   },
   {
@@ -125,21 +89,19 @@
    "outputs": [],
    "source": [
     "import ast\n",
-    "import os\n",
     "from typing import List\n",
     "\n",
     "import chromadb\n",
+    "import mlflow\n",
+    "import mlflow.deployments\n",
     "import pandas as pd\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.document_loaders import WebBaseLoader\n",
-    "from langchain.embeddings.databricks import DatabricksEmbeddings\n",
     "from langchain.embeddings.sentence_transformer import SentenceTransformerEmbeddings\n",
-    "from langchain.llms import Databricks\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain.vectorstores import Chroma\n",
-    "\n",
-    "import mlflow\n",
-    "import mlflow.deployments\n",
+    "from langchain_community.embeddings import MlflowEmbeddings\n",
+    "from langchain_community.llms import Mlflow\n",
     "from mlflow.deployments import set_deployments_target\n",
     "from mlflow.metrics.genai.metric_definitions import relevance"
    ]
@@ -159,18 +121,7 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2.9.1'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check mlflow version\n",
     "mlflow.__version__"
@@ -191,88 +142,10 @@
      "title": ""
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.4.18'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# check chroma version\n",
     "chromadb.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "64d5d5eb-8ee7-496a-be8e-fd658c4a4f44",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "source": [
-    "### Set-up Databricks Workspace Secrets\n",
-    "\n",
-    "In order to use the secrets that are defined within this notebook, ensure that they are set via following the [guide to Databricks Secrets here](https://docs.databricks.com/en/security/secrets/secrets.html). It is highly recommended to utilize the [Databricks CLI](https://docs.databricks.com/en/dev-tools/cli/index.html) to set secrets within your workspace for a secure experience.\n",
-    "\n",
-    "In order to safely store and access your API KEY for Azure OpenAI, ensure that you are setting the following when registering your secret:\n",
-    "\n",
-    "- **KEY_NAME**: The name that you will be setting for your Azure OpenAI Key\n",
-    "- **SCOPE_NAME**: The referenced scope that your secret will reside in, within Databricks Secrets\n",
-    "- **OPENAI_API_KEY**: Your Azure OpenAI Key\n",
-    "\n",
-    "As an example, you would set these keys through a terminal as follows:\n",
-    "\n",
-    "```bash\n",
-    "    databricks secrets put-secret \"<SCOPE_NAME>\" \"<KEY_NAME>\" --string-value \"<OPENAI_API_KEY>\"\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set your Scope and Key Names that you used when registering your API KEY from the Databricks CLI\n",
-    "# Do not put your OpenAI API Key in the notebook!\n",
-    "SCOPE_NAME = ...\n",
-    "KEY_NAME = ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "19cb7955-5f15-48e9-896c-fcf36cb60782",
-     "showTitle": false,
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = dbutils.secrets.get(scope=SCOPE_NAME, key=KEY_NAME)  # noqa: F821\n",
-    "os.environ[\"OPENAI_API_TYPE\"] = \"azure\"\n",
-    "os.environ[\"OPENAI_API_VERSION\"] = \"2023-05-15\"\n",
-    "# Ensure that you set the name of your OPEN_API_BASE value to the name of your OpenAI instance on Azure\n",
-    "os.environ[\"OPENAI_API_BASE\"] = \"https://<NAME_OF_YOUR_INSTANCE>.openai.azure.com/\"  # replace this!\n",
-    "os.environ[\"OPENAI_DEPLOYMENT_NAME\"] = \"gpt-35-turbo\"\n",
-    "os.environ[\"OPENAI_ENGINE\"] = \"gpt-35-turbo\""
    ]
   },
   {
@@ -287,7 +160,7 @@
     }
    },
    "source": [
-    "### Create and Test Endpoint on MLflow for OpenAI"
+    "### Create and Test Endpoint on MLflow for AWS Bedrock"
    ]
   },
   {
@@ -307,32 +180,12 @@
    },
    "outputs": [],
    "source": [
-    "client = mlflow.deployments.get_deploy_client(\"databricks\")\n",
+    "client = mlflow.deployments.get_deploy_client(\"http://127.0.0.1:5000\")\n",
     "\n",
-    "endpoint_name = \"<your-endpoint-name>\"  # replace this!\n",
-    "client.create_endpoint(\n",
-    "    name=endpoint_name,\n",
-    "    config={\n",
-    "        \"served_entities\": [\n",
-    "            {\n",
-    "                \"name\": \"test-gpt\",  # Provide a unique identifying name for your deployments endpoint\n",
-    "                \"external_model\": {\n",
-    "                    \"name\": \"gpt-3.5-turbo\",\n",
-    "                    \"provider\": \"openai\",\n",
-    "                    \"task\": \"llm/v1/completions\",\n",
-    "                    \"openai_config\": {\n",
-    "                        \"openai_api_type\": \"azure\",\n",
-    "                        # replace with your own secrets, for reference see https://docs.databricks.com/en/security/secrets/secrets.html\n",
-    "                        \"openai_api_key\": \"{{secrets/scope/openai_api_key}}\",\n",
-    "                        \"openai_api_base\": \"{{secrets/scope/openai_api_base}}\",\n",
-    "                        \"openai_deployment_name\": \"gpt-35-turbo\",\n",
-    "                        \"openai_api_version\": \"2023-05-15\",\n",
-    "                    },\n",
-    "                },\n",
-    "            }\n",
-    "        ],\n",
-    "    },\n",
-    ")"
+    "endpoints = client.list_endpoints()\n",
+    "\n",
+    "for endpoint in endpoints:\n",
+    "    print(endpoint)"
    ]
   },
   {
@@ -354,7 +207,7 @@
    "source": [
     "print(\n",
     "    client.predict(\n",
-    "        endpoint=endpoint_name,\n",
+    "        endpoint=\"completions\",\n",
     "        inputs={\n",
     "            \"prompt\": \"How is Pi calculated? Be very concise.\",\n",
     "            \"max_tokens\": 100,\n",
@@ -411,18 +264,16 @@
     "text_splitter = CharacterTextSplitter(chunk_size=CHUNK_SIZE, chunk_overlap=0)\n",
     "texts = text_splitter.split_documents(documents)\n",
     "\n",
-    "llm = Databricks(\n",
-    "    endpoint_name=\"<your-endpoint-name>\",  # replace this!\n",
-    "    extra_params={\n",
-    "        \"temperature\": 0.1,\n",
-    "        \"top_p\": 0.1,\n",
-    "        \"max_tokens\": 500,\n",
-    "    },  # parameters used in AI Playground\n",
+    "llm = Mlflow(\n",
+    "    target_uri=\"http://127.0.0.1:5000\",\n",
+    "    endpoint=\"completions\",\n",
     ")\n",
     "\n",
-    "\n",
-    "# create the embedding function using Databricks Foundation Model APIs\n",
-    "embedding_function = DatabricksEmbeddings(endpoint=\"databricks-bge-large-en\")\n",
+    "# create the embedding function using AWS Bedrock\n",
+    "embedding_function = MlflowEmbeddings(\n",
+    "    target_uri=\"http://127.0.0.1:5000\",\n",
+    "    endpoint=\"embeddings\",\n",
+    ")\n",
     "docsearch = Chroma.from_documents(texts, embedding_function)\n",
     "\n",
     "qa = RetrievalQA.from_chain_type(\n",
@@ -478,9 +329,9 @@
     "\n",
     "# Load the static evaluation dataset from disk and deserialize the source and retrieved doc ids\n",
     "synthetic_eval_data[\"source\"] = synthetic_eval_data[\"source\"].apply(ast.literal_eval)\n",
-    "synthetic_eval_data[\"retrieved_doc_ids\"] = synthetic_eval_data[\"retrieved_doc_ids\"].apply(\n",
-    "    ast.literal_eval\n",
-    ")"
+    "synthetic_eval_data[\"retrieved_doc_ids\"] = synthetic_eval_data[\n",
+    "    \"retrieved_doc_ids\"\n",
+    "].apply(ast.literal_eval)"
    ]
   },
   {
@@ -566,7 +417,9 @@
     "        ],\n",
     "        \"source\": [\n",
     "            [\"https://mlflow.org/docs/latest/index.html\"],\n",
-    "            [\"https://mlflow.org/docs/latest/getting-started/tracking-server-overview/index.html\"],\n",
+    "            [\n",
+    "                \"https://mlflow.org/docs/latest/getting-started/tracking-server-overview/index.html\"\n",
+    "            ],\n",
     "            [\"https://mlflow.org/docs/latest/python_api/mlflow.deployments.html\"],\n",
     "            [\"https://mlflow.org/docs/latest/tracking/autolog.html\"],\n",
     "        ],\n",
@@ -905,7 +758,9 @@
    },
    "outputs": [],
    "source": [
-    "set_deployments_target(\"databricks\")  # To retrieve all endpoint in your Databricks Workspace\n",
+    "set_deployments_target(\n",
+    "    \"databricks\"\n",
+    ")  # To retrieve all endpoint in your Databricks Workspace\n",
     "\n",
     "relevance_metric = relevance(\n",
     "    model=\"endpoints:/databricks-llama-2-70b-chat\"\n",
@@ -988,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
